# NR-Style

./: README.md  pyproject.toml
scripts/: bar_plot.py  show_style.py
src/nrstyle/: __init__.py  colormaps.py  graphic_utils.py  style_initializer.py
src/nrstyle/color/: AlphaColor.py  __init__.py  color_converter.py  colors.py
src/nrstyle/matplotlib_styles/: nr_style_paper.mplstyle
src/nrstyle/plots/: PlotSettings.py  __init__.py  labeled_plot.py  line_plots.py
src/nrstyle/plots/bar_plot/: __init__.py  bar_helpers.py  bar_plot.py  stat_bar_plot.py
src/nrstyle/plots/features/: __init__.py  grad_bar.py  legend.py
src/nrstyle/stats/: __init__.py  significance.py
src/nrstyle/styling/: __init__.py  color_converter.py  colormaps.py  graphic_utils.py  style_initializer.py
